...
        let label = UILabel()
        label.translatesAutoresizingMaskIntoConstraints = false
        label.textAlignment = .center
        label.textColor = UIColor(named: "colorYellow")
        label.font = UIFont.systemFont(ofSize: 17)
        label.numberOfLines = 1
        label.accessibilityIdentifier = "nameMovieCell"
        return label
    }()
    
    func configure(movie: Movie, favorite: Bool) {
        contentView.backgroundColor = UIColor(named: "colorDarkBlue")
        posterImage.image = imageManager.getImage(type: .poster, image: movie.posterPath)
...
